@@ -223,6 +223,9 @@ Avro 1.5.0 (unreleased)
     AVRO-759. Java: Fix NullPointerException when some but not all
     fields are aliased. (Xiaolu Ye via cutting)
 
+    AVRO-755. Java: Fix SpecificResponder to correctly handle message
+    parameter lists that differ between client and server.  (cutting)
+
 Avro 1.4.1 (13 October 2010)
 
   NEW FEATURES
